--- a/PlotSwJ1727_LC.ipynb
+++ b/PlotSwJ1727_LC.ipynb
@@ -274,7 +274,7 @@
     "\n",
     "# On-demand products -- http://maxi.riken.jp/mxondem/\n",
     "maxi_soft  = initialize_maxi_curve('files/Swift_J1727_2.0-6.0keV_gsclc.dat')\n",
-    "maxi_hard = initialize_maxi_curve('../files/Swift_J1727_6.0-20.0keV_gsclc.dat')\n",
+    "maxi_hard = initialize_maxi_curve('files/Swift_J1727_6.0-20.0keV_gsclc.dat')\n",
     "\n",
     "# Only use the data points after the outburst onset (to ensure measurement of stat. sig. HR values)\n",
     "index = np.where(maxi_soft[:,2] > 1.0)[0][0] - 1\n",
